DuPont DevSB/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Group1__c</fullName>
        <label>Account Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Description__c</fullName>
        <label>Account Group Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Customer Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <label>Account Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payer1__c</fullName>
        <label>Account Payer 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payor_2__c</fullName>
        <label>Account Payor 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Ship_To__c</fullName>
        <label>Account Ship To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <description>This is the stage or status of the account.</description>
        <label>Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Phone</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Contact Phone)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_2__c</fullName>
        <label>Customer Group 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment1__c</fullName>
        <label>Customer Segment 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment_2__c</fullName>
        <label>Customer Segment 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dirtibution_Channel_1__c</fullName>
        <label>Distribution Channel 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_2__c</fullName>
        <label>Distribution Channel 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <label>Division 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_2__c</fullName>
        <label>Division 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ext ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms1__c</fullName>
        <label>Payment Terms 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_2__c</fullName>
        <label>Payment Terms 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <label>Region 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <label>Region 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Last_Year__c</fullName>
        <description>Revenue received from last year&apos;s sales.</description>
        <label>Revenue Last Year</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_PYTD__c</fullName>
        <description>Revenue recorded for the previous year to date</description>
        <label>Revenue PYTD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_YTD__c</fullName>
        <description>Revenue recorded for the current year YTD</description>
        <label>Revenue YTD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_vs_PYTD__c</fullName>
        <description>Revenue YTD vs Previous Year To Date</description>
        <label>Revenue vs PYTD</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Org_2__c</fullName>
        <label>Sales Org 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_P_O__c</fullName>
        <description>Sales Performance Objective of the year for an account</description>
        <label>Sales P/O</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Revenue_vs_Sales_P_O__c</fullName>
        <description>Percentage of sales revenue versus sales objective.</description>
        <label>Sales Revenue vs. Sales P/O</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition1__c</fullName>
        <label>Shipping Condition 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition_2__c</fullName>
        <label>Shipping Condition 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_1__c</fullName>
        <label>Telephone 1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_for_testing</fullName>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>City__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Sales_Org__c</columns>
        <columns>Dirtibution_Channel_1__c</columns>
        <columns>Division1__c</columns>
        <columns>Customer_Segment1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>notContain</operation>
            <value>005</value>
        </filters>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>